# GeradorCertificados

./: README.md
gerador/: app.py  edit-certificado.py  pyproject.toml  teste-svg.py
